[gd_scene load_steps=2 format=3 uid="uid://bf1alu2xxg7ye"]

[ext_resource type="Script" uid="uid://cn6vik2tlbser" path="res://scripts/ui/settings_ui.gd" id="1_b5ayt"]

[node name="SettingsUI" type="CanvasLayer"]
script = ExtResource("1_b5ayt")

[node name="SettingsMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="SettingsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08235294, 0.79607844, 1, 1)

[node name="MarginContainer" type="MarginContainer" parent="SettingsMenu/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenu/ColorRect/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="SettingsMenu/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings
"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsMenu/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayTimeLabel" type="Label" parent="SettingsMenu/ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "                   Play time:  "
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="SettingsMenu/ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="PlayTimeSlider" type="HSlider" parent="SettingsMenu/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = 10.0
step = 10.0
value = 10.0

[node name="DifficultyLabel" type="Label" parent="SettingsMenu/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Difficulty:"
horizontal_alignment = 1

[node name="DifficultyOptionButton" type="OptionButton" parent="SettingsMenu/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1
selected = 0
item_count = 3
popup/item_0/text = "Easy"
popup/item_0/id = 0
popup/item_1/text = "Medium"
popup/item_1/id = 1
popup/item_2/text = "Hard"
popup/item_2/id = 2

[node name="BackButton" type="Button" parent="SettingsMenu/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="value_changed" from="SettingsMenu/ColorRect/MarginContainer/VBoxContainer/PlayTimeSlider" to="." method="_on_play_time_slider_value_changed"]
